--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>Jesse Hayward - Website</title>
+        <title>Scrap Metal Website</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="fonts.css">
         
@@ -11,32 +11,9 @@
 
     <body>
 
-        <div class=".container">
+        <div class="container">
 
-            <div class="spacing"></div>
-
-                <div id="name" class="row">
-
-                    <h1 class="text-center">Jesse Hayward</h1>
-                    <br />
-                    <h2 class="text-center">Just a nerdy guy from Edmonton, Alberta.</h2> 
-                    <h2 class="text-center">I do some technical things.</h2>
-                    <br />
-                    <br />
-                    <br />
-                    <nav>
-                        <ul>
-                            <li>
-                                <a id="projectslink" href="projects.html">projects</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <br />
-                    <br />
-                    <h2 class="text-center">actual website coming soon!</h2>
-
-                </div>
-
+            <p>scrap metal site</p>
 
         </div>
 
