--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
     <head>
 
+        <meta charset="utf-8">
         <title>Scrap Metal Website</title>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="style.css">
@@ -53,16 +54,16 @@
         
                     </div>
 
-              </nav>  
-    
-             </nav>
+            </nav>
+
+      <!-- end navbar -->      
 
 
         <div class="container">
 
             <div class="row">
 
-
+                <p>test</p>
 
             </div>
 
