added viewport meta tag
added viewport meta tag for mobile layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Scrap Metal Website</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="fonts.css">
@@ -117,6 +118,8 @@
                     </ul>
                 
                 </div>    
+
+                
 
             </div>    
 
