--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
                             <div class="carousel-inner">
 
                               <div class="carousel-item active">
-                                <img src="img/scrappipe.jpg" class="d-block w-100" alt="...">
+                                <img src="img/scrappipe.jpg" class="d-block w-100 img-thumbnail" alt="...">
                               </div>
 
                               <div class="carousel-item">
-                                <img src="img/scrapcars.jpg" class="d-block w-100" alt="...">
+                                <img src="img/scrapcars.jpg" class="d-block w-100 img-thumbnail" alt="...">
                               </div>
 
                               <div class="carousel-item">
-                                <img src="img/flatbedtruck.jpg" class="d-block w-100" alt="...">
+                                <img src="img/flatbedtruck.jpg" class="d-block w-100 img-thumbnail" alt="...">
                               </div>
 
                             </div>
