--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                                     <div class="d-lg-none d-md-none d-sm-block">
 
                                             <a class="menuItem text-center nav-link" href="tel:(403) 786-8379">
-                                                <h6>
+                                                <h2>
                                                     <i class="fa-solid fa-phone"></i>
                                                     Phone: (403) 786-8379
-                                                </h6>
+                                                </h2>
                                             </a>
     
                                             <div class="row">
@@ -86,6 +86,46 @@
                                 </div>
 
                             </div>
+
+                            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+                                <div class="container-fluid">
+
+                                  <button class="navbar-toggler mx-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                                    <span class="navbar-toggler-icon"></span>
+                                  </button>
+
+                                  <div class="collapse navbar-collapse text-center" id="navbarNav">
+
+                                    <ul class="navbar-nav mx-auto">
+
+                                      <li class="nav-item">
+                                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                      </li>
+
+                                      <li class="nav-item">
+                                        <a class="nav-link" href="#">About</a>
+                                      </li>
+
+                                      <li class="nav-item">
+                                        <a class="nav-link" href="#">Services</a>
+                                      </li>
+
+                                      <li class="nav-item">
+                                        <a class="nav-link" href="#">FAQ</a>
+                                      </li>
+
+                                      <li class="nav-item">
+                                        <a class="nav-link" href="#">Contact</a>
+                                      </li>
+
+                                    </ul>
+
+                                  </div>
+
+                                </div>
+
+                              </nav>
 
                         </div>
 
