general website update
changed <title> to proper website title, added Location to navbar

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Scrap Metal Website</title>
+        <title>A&M Scrap Metal Inc.</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="style.css">
@@ -132,6 +132,10 @@
 
                                       <li class="nav-item">
                                         <a class="nav-link" href="#">About</a>
+                                      </li>
+
+                                      <li class="nav-item">
+                                        <a class="nav-link" href="#googleMap">Location</a>
                                       </li>
 
                                       <li class="nav-item">
@@ -291,7 +295,7 @@
 
             </div>
 
-            <div class="container">
+            <div id="googleMap" class="container">
 
                 <div class="row">
 
